# Navigation-App

./: '  CMakeLists.txt  runtime_import_test.cpp
Algorithms/Dijkstra/: DijkstraPathFinder.cpp  DijkstraPathFinder.hpp
Algorithms/Factory/: PathFinderFactory.cpp  PathFinderFactory.h  PathFinderFactory.hpp
Algorithms/Interfaces/: IPathFinder.hpp
Algorithms/Types/: AlgorithmType.hpp  Route.h
Navigation/include/Core/: Intersection.hpp  RoadSegment.hpp
application/: CMakeLists.txt
application/include/application/: ApplicationBootstrap.hpp  ApplicationTypes.hpp  GraphLoader.hpp  INodeGeometryProvider.hpp  NavigationResponse.hpp  NavigationService.hpp  RouteOptimizer.hpp  RoutePresentationAggregator.hpp  RoutePresentationBuilder.hpp  RoutePresentationData.hpp  RuntimeGeometryProvider.hpp
application/src/: ApplicationBootstrap.cpp  GraphLoader.cpp  NavigationService.cpp  RouteOptimizer.cpp  RoutePresentationAggregator.cpp  RoutePresentationBuilder.cpp  RuntimeGeometryProvider.cpp  RuntimeGeometryProvider.hpp
application/tests/: CMakeLists.txt  test_graph_loader.cpp  test_navigation_service.cpp  test_route_optimizer.cpp  test_route_presentation_aggregator.cpp  test_route_presentation_builder.cpp
core/include/core/graph/: Graph.hpp
core/include/core/model/: Edge.hpp  Node.hpp  Route.hpp
core/include/core/types/: Types.hpp
core/src/: Edge.cpp  Graph.cpp  Node.cpp  Route.cpp
include/Core/: RoadSegment.hpp
include/Persistence/: GraphLoader.hpp  GraphSaver.hpp
persistence/include/: GeoJSONImporter.hpp  IGraphImporter.h  IGraphSerializer.h  ImportedGraph.hpp  JsonGraphSerializer.h
persistence/include/internal/: GeoJSONParser.hpp  GraphBuilder.hpp  RoadFeatureExtractor.hpp
persistence/src/: GeoJSONImporter.cpp  GeoJSONParser.cpp  GraphBuilder.cpp  JsonGraphSerializer.cpp  RoadFeatureExtractor.cpp
persistence/tests/test_persistence/: CMakeLists.txt  test_deserialization.cpp  test_serializer_contract.cpp
src/Core/: Graph.cpp
src/Persistence/: GraphLoader.cpp  GraphSaver.cpp
ui/: main.cpp
ui/controllers/: NavigationController.cpp  NavigationController.hpp  SceneController.cpp  SceneController.h
ui/mainwindow/: MainWindow.cpp  MainWindow.h
ui/rendering/: MapRenderer.cpp  MapRenderer.h
